# envguard

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.tape
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  crypto.rs  lib.rs  main.rs  store.rs
