[package]
name = "envguard"
version = "0.1.2"
edition = "2021"
description = "Encrypted .env files that just work. Zero config, single binary, built-in team sharing."
license = "MIT"
repository = "https://github.com/Lexxes-Projects/envguard"
keywords = ["env", "secrets", "encryption", "dotenv", "security"]
categories = ["command-line-utilities", "cryptography"]

[package.metadata.docs.rs]
targets = []

[dependencies]
age = { version = "0.11", features = ["armor"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
secrecy = "0.10"
